--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="banner">
         <nav class="navbar navbar-expand-lg bg-white align-items-center">
             <div class="container">
-              <a class="navbar-brand fw-bold fw-bold" href="#"><img src="images/christmas.png" alt="" class="logo">AROUND</a>
+              <a class="navbar-brand fw-bold fw-bold" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24"><g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"><path d="M12 21a9 9 0 0 0 9-9a9 9 0 0 0-9-9a9 9 0 0 0-9 9a9 9 0 0 0 9 9z"/><path d="m15 16l-3-8l-3 8m5-2h-4"/></g></svg>AROUND</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
